Update 32医疗相关.md, 33心理咨询.md, 99鸣谢.md, SUMMARY.md Delete 043学联简介.md

--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -1,14 +1,17 @@
-| **工作** | **负责人** |
-| ------ | ------- |
-|        |         |
-|        |         |
-|        |         |
-|        |         |
-|        |         |
-|        |         |
-|        |         |
-|        |         |
-|        |         |
-|        |         |
+| **负责人** |                        **负责内容**                       |
+| :-----: | :---------------------------------------------------: |
+|    超瑜   |                行前 - 申请签证&#xA;落地 - 心理咨询                |
+|    锦涛   | 行前 - 新生包寄存&#xA;落地 - 电话卡 &#xA;落地 - 保险及豁免&#xA;生活 - 学联服务 |
+|    李圆   |               行前 - 国内手机号&#xA;行前 - 国内银行卡               |
+|    逸飞   |                        行前 - 机票                        |
+|    雨航   |                行前 - 行李准备&#xA;落地 - UZH报到               |
+|    逍遥   |                       行前 - “云”找房                      |
+|    思婕   |         落地 - 机场行李&#xA;落地 - 找房租房&#xA;落地 - 医疗相关         |
+|    晨宇   |                        落地 - 交通票                       |
+|    王尊   |                       落地 - ETH报到                      |
+|    竹仝   |                    落地 - Kreisbüro报到                   |
+|    俞玥   |                       落地 - 瑞士银行卡                      |
+|    张堃   |                      落地 - 移民局录指纹                      |
+|    凌晞   |                       生活 - 消费相关                       |
 
 ^
