--- a/05提问.md
+++ b/05提问.md
@@ -1,12 +1,23 @@
-#### **自由提问环节**
+**自由提问环节**
 
 请**开麦**或**发送zoom消息**提问
 
 ^
 ^
 
-#### 欢迎加入2023苏黎世新生群
+> **欢迎加入2023苏黎世新生群**
 
 ![](.topwrite/assets/6401.png =353)
+
+^
+^
+
+:-: ![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =250)
+
+:-: 苏黎世中国学生学者联合会
+
+:-: Association of Chinese Students and Scholars in Zurich
+
+:-: Assoziation der Chinesischen Studierenden und Gelehrten in Zürich
 
 ^
