--- a/30学联服务.md
+++ b/30学联服务.md
@@ -20,7 +20,9 @@
 
 ^
 
-**学联专属Sunrise LEBARA折扣**：<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
+**学联专属Sunrise LEBARA折扣**：
+
+<https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li>
 
 ![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 
