--- a/31苏黎世消费.md
+++ b/31苏黎世消费.md
@@ -2,8 +2,9 @@
 
 一般在1200-1500瑞左右。固定开销有房租、保险、电话费、交通费等，如果住学生公寓，woko、juwo、wfss，一般房租在500-800之间，比较便宜，如果租在外面私人房东，价格会更贵一些，在600-1000之间。保险方面，如果是25岁以下，大部分同学会选择一个月120瑞的0起保academic care学生保险，其余还有65瑞左右的学生保险。电话费一般在20-35瑞之间。交通费一般会买110区年卡，一年570瑞。其余的开销就是平时买菜购物了，如果大多在家做饭，差不多一个月200瑞左右超市购物就够了，偶尔下次馆子，人均在30-50瑞左右，网购一些护肤品衣服之类的，消费50-200不等。
 
+****
 
-**2. 现金还是刷卡多**
+#### **2. 现金还是刷卡多**
 
 基本上都是刷卡，瑞士的所有店里都有pos机，刷卡非常方便，也可以用国内的信用卡。取现比较麻烦，尤其是在境外取现会有高额手续费，如果是境外旅游，推荐revolut银行卡，转入瑞郎，可以根据实时谷歌汇率结算成当地货币，扣除相应的瑞郎。
 
