--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -15,3 +15,7 @@
 |    凌晞   |                       生活 - 消费相关                      |
 
 ^
+
+尽管我们已经尽了最大努力在有限时间内整理并提供丰富全面的干货信息，但仍可能会出现错误与疏漏。
+
+**欢迎大家对文档进行抓虫纠错，请发邮件致** <info@acssz.org> **反馈意见，谢谢**！
