--- a/05提问.md
+++ b/05提问.md
@@ -4,18 +4,14 @@
 
 ^
 
-> **欢迎加入2023苏黎世新生群**
-
-![](.topwrite/assets/6401.png =239)
+> 尽管我们已经尽了最大努力在有限时间内整理并提供丰富全面的干货信息，但仍可能会出现错误与疏漏。
+>
+> **欢迎大家对文档进行抓虫纠错，请发邮件致** <info@acssz.org> **反馈意见，谢谢**！
 
 ^
 
-:-: ![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =250)
+> **欢迎加入2023苏黎世新生群**
 
-:-: 苏黎世中国学生学者联合会
-
-:-: Association of Chinese Students and Scholars in Zurich
-
-:-: Assoziation der Chinesischen Studierenden und Gelehrten in Zürich
+![](.topwrite/assets/6401.png =239)
 
 ^
