--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -1,1 +1,25 @@
+在抵达苏黎世3个星期内，必须到苏黎世移民局办理permit。3个星期？
+
 ^
+
+**携带材料**：
+
+护照
+
+学校开局的显示学分的在读证明（学校官方网站能查询到如何获得）
+
+注册证明
+
+^
+
+**移民局地址**
+
+[Berninastrasse 45, 8090 Zürich](https://goo.gl/maps/CDzxUoomjsara83c7) 地址正确？
+
+^
+
+第一次办理需要录指纹（之后还需要去吗？我记得只需要去一次）+拍照，全程在工作人员指导下完成即可。
+
+^
+
+在办理完成后3个星期内（有这么快吗？）会以挂号信形式收到permit卡，需要确保邮箱上有本人姓名才能收到信件哦。
