--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -1,4 +1,6 @@
-在抵达苏黎世3个星期内，必须到苏黎世移民局办理permit。3个星期？
+在抵达~~苏黎世3个星期内，必须~~到苏黎世移民局办理permit。
+
+3个星期？为什么不是先去Kreisburo报到，然后预约移民局录指纹的时间？
 
 ^
 
@@ -9,6 +11,8 @@
 学校开局的显示学分的在读证明（学校官方网站能查询到如何获得）
 
 注册证明
+
+钱？
 
 ^
 
