--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,12 +1,12 @@
 #### **1. 申请签证的时间**
 
-在收到录取通知书后，就可以开始准备申请签证的材料，eth官网推荐入境前3个月递交申请，整个审核过程需 8-12 周。
+在收到录取通知书后，就可以开始准备申请签证的材料，ETH官网推荐入境前3个月递交申请，整个审核过程需 8-12 周。（实际审核时间没这么长？
 
 ^
 
 #### **2. 申请材料**
 
-大体来说申请材料有以下几项，**但请详细阅读学校给出的清单** ，清单表可在链接里查看
+大体来说（*不够精确的表达*）申请材料有以下几项，**但请详细阅读学校给出的清单** ，清单表可在链接里查看
 
 * 申请表（national type D visa，链接中有下载表）
 * 护照（注意护照有效期）
@@ -19,6 +19,8 @@
 
 **请详细阅读学校给出的清单**：
 
+（*ETH是和移民局合作的，准确说这份资料应该是ETH让移民局一起给出的*）
+
 > **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
 >
 > ^
@@ -26,6 +28,12 @@
 > **UZH要求的申请材料**
 >
 > <https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>
+
+^
+
+*瑞士驻中国使领馆的材料要求*？
+
+*使领馆要求和移民局不完全相同，需要取并集，把所有材料都交上去*！
 
 ^
 
