--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,12 +1,12 @@
 #### **1. 申请签证的时间**
 
-在收到录取通知书后，就可以开始准备申请签证的材料，ETH官网推荐入境前3个月递交申请，整个审核过程需 8-12 周。（实际审核时间没这么长？
+在收到录取通知书后，就可以开始准备申请签证的材料，ETH官网推荐入境前3个月递交申请，整个审核过程需 8-12 周。（*实际审核时间没这么长*？）
 
 ^
 
 #### **2. 申请材料**
 
-大体来说（*不够精确的表达*）申请材料有以下几项，**但请详细阅读学校给出的清单** ，清单表可在链接里查看
+大体来说（*不够精确的表达，应该明确是哪里要求的，标出来源*）申请材料有以下几项，**但请详细阅读学校给出的清单** ，清单表可在链接里查看
 
 * 申请表（national type D visa，链接中有下载表）
 * 护照（注意护照有效期）
@@ -40,7 +40,7 @@
 #### **3. 几点特别注意的**！
 
 * 注意不要用旅游签证进入瑞士
-* 如下申请材料仅针对canton Zurich 的学校
+* 如下申请材料仅针对Canton Zurich的学校
 * 存款必须存在自己的名下，不可以存在父母名下
 
 ^
