--- a/13关于赴瑞行程.md
+++ b/13关于赴瑞行程.md
@@ -8,7 +8,7 @@
 
 #### **1.2 机票日期/时间选择：**
 - 航班落地（入境）时间须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免入境时遇到麻烦
-- 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少导致难以到达市区[自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地（可提前下载Google Map和SBB Mobile/ZVV应用[ 此软件（及许多在瑞生活需要的软件）运行需要谷歌框架，使用安卓手机的同学请特别注意]，并由此查询路线&购票，详见“交通票”部分）；苏黎世的出租车价格高昂，非必要不建议乘坐]
+- 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少导致难以到达市区{自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地[可提前下载Google Map和SBB Mobile/ZVV应用（此软件（及许多在瑞生活需要的软件）运行需要谷歌框架，使用安卓手机的同学请特别注意）]，并由此查询路线&购票，详见“交通票”部分）；苏黎世的出租车价格高昂，非必要不建议乘坐}
 
 #### **1.3 中转路线选择注意事项**
 - 注意行李在中转地是否能够直挂（购票时一般会有显示，值机时值机员也会告知）
@@ -87,7 +87,7 @@
 优点：
 - 出境口岸选择多
 - 航班数量相对多
-- 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证（https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html）
+- 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证（<https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html>）
 
 缺点：
 - 受地理因素影响，飞行时间较长
@@ -178,7 +178,7 @@
 -- 总耗时稍长
 -- 中转国对中国内地护照不免签，也未开放过境签，航班不正常时有滞留风险
 - 北京首都PEK-伦敦希思罗LHR-苏黎世ZRH
-参考：https://piao.tips/d05985a3eb/
+参考：<https://piao.tips/d05985a3eb/>
 承运航司：英国航空BA、维珍航空VS、中国国际航空CA、中国南方航空CZ等
 单程价格：7-12k
 优点：
@@ -192,12 +192,12 @@
 鉴于许多同学的常驻城市和出境口岸所在城市不同，需要额外考虑从常驻城市到出境口岸所在城市这段行程。
 一般情况下，假如你的常驻城市到出境口岸所在城市有直达航班，而该航班的承运航司或其合作伙伴又执飞上述洲际航线的，可在购票界面中直接讲始发城市填写为你的常驻城市，看看是否有常驻城市→出境口岸所在城市→中转城市（如有）→苏黎世的联程机票，如有的话，即使价格稍高我们也建议选择，因为这样行李能够从你的始发城市直接直挂到苏黎世，会大大简化你的行程。
 当然，如果不想搭乘联程航班前往出境口岸所在城市，或者没有可选航班的，亦可选择自行通过公路、铁路、航空等前往出境口岸所在城市乘机，此处不表。
-此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考：https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1
+此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考：<https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1>
 
 
 ### **3. 参考**
-- 国际航线航班信息：知乎《国际航班汇总》专栏（https://www.zhihu.com/column/c_1286552806351065088）
+- 国际航线航班信息：知乎《国际航班汇总》专栏（<https://www.zhihu.com/column/c_1286552806351065088>）
 - 航班不正常保障及旅客权益：EC261
-（https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA）
+（<https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA>）
 - 内地往来香港航班信息：知乎《港澳台地区航班及相关信息》专栏
 （<https://www.zhihu.com/column/c_1593393411708715010>）
