--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -3,7 +3,7 @@
 |    超瑜   |                行前 - 申请签证&#xA;落地 - 心理咨询               |
 |    锦涛   | 行前 - 新生包寄存&#xA;落地 - 电话卡&#xA;落地 - 保险及豁免&#xA;生活 - 学联服务 |
 |    李圆   |               行前 - 国内手机号&#xA;行前 - 国内银行卡              |
-|    逸飞   |                        行前 - 机票                       |
+|    逸飞   |                       行前 - 赴瑞机票                      |
 |    雨航   |               行前 - 行李准备&#xA;落地 - UZH报到               |
 |    逍遥   |                      行前 - “云”找房                      |
 |    思婕   |         落地 - 机场行李&#xA;落地 - 找房租房&#xA;落地 - 医疗相关        |
