--- a/11行李准备.md
+++ b/11行李准备.md
@@ -12,9 +12,7 @@
 **银联、信用卡**：关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡。
 ※瑞士不会有银行通过邮件方式通知你账号有异常情况，任何以银行名义给你发的邮件建议统统删除
 
-**转换插头**：瑞标和万用插头。真正居家旅行必备。不嫌少。请至少携带两个，一个日常使用一个备用。，当地买很贵。或者买一个带瑞士插头的拖线板。
-![](.topwrite/assets/插头.png =251)
-建议搜索“瑞标”转接头。所需数量需考虑以下因素：①需转换插头的电器数量②需同时使用的电器数量③是否有耐心一个转换插头挪来挪去。
+**转换插头**：瑞标和万用插头。真正居家旅行必备。不嫌少。请至少携带两个，一个日常使用一个备用。，当地买很贵。或者买一个带瑞士插头的拖线板。建议搜索“瑞标”转接头。所需数量需考虑以下因素：①需转换插头的电器数量②需同时使用的电器数量③是否有耐心一个转换插头挪来挪去。
 
 ^
 
@@ -27,7 +25,7 @@
 **计算器**：根据专业自行决定，Casio fx-991es plus这个级别足够。智能计算器、绘图计算器一般不允许进考场。
 ※有test mode的智能计算器多数情况下是允许被使用的，据观察，这边同学考试用的计算器都比Casio fx-991es plus 这个级别的要智能很多。
 **眼镜**：1-2副备用。在瑞士价格较贵。墨镜在日常阳光下可满足护眼需求，上雪山时则为生存必须。爱运动的同学也推荐从国内购买泳镜。尤其是近视泳镜，苏黎世及周边边境城市都没有卖。
-**日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。注意日韩风格的服装在当地很难买到，且价格昂贵。
+**日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。注意日韩风格的服装在当地很难买到，且价格昂贵。另外尺码较小的衣服本地也不大好买。
 厚外套可以带但最多带一件即可，一方面带多了行李不好收拾，另一方面在瑞士打折季和outlets的衣服也很划算，有需要可以直接在瑞士购买。至于夏天的气温比较不稳定：14年夏天最高温度一度15度，晚上甚至要穿毛衣；22年夏天最高温度动辄30以上。所以夏装携带请自行斟酌。另外特别提醒一下，瑞士大部分建筑是没有空调的。
 **常用药物**：根据自己的情况携带对应药物，另外建议携带常用药物如云南白药、腹可安、喇叭正露丸等以备不时之需。
 抗生素也建议携带一些以备不时之需，因为这边的药店没有医生处方是不会售卖抗生素的，而医生非必要一般也不会开抗生素
@@ -57,7 +55,7 @@
 （瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带）
 
 **电脑**：有换代计划的话推荐学期初针对高校学生的Neptun项目，提供相对低价的高配置产品。下单到配送需要一段时间，建议国内带一个备用。注意高端电子产品价格一般国内更为便宜，但存在无法在瑞士保修的可能
-**正装**：可以考虑直接去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。
+**正装**：可以考虑直接去隔壁意大利定制（H&M之类的专卖店也有便宜的），使用场合不多，但做Pre或者参加商业活动时总有机会用到。
 **晚礼服**：同样可以在隔壁意大利搞定，可用来出席各种晚宴、舞会等，比如每年11月， 会在ETHZ举办欧洲最大学生舞会polyball。
 **旗袍**：可用于文化节或正式的特殊的场合。
 
