--- a/11行李准备.md
+++ b/11行李准备.md
@@ -25,7 +25,7 @@
 **计算器**：根据专业自行决定，Casio fx-991es plus这个级别足够。智能计算器、绘图计算器一般不允许进考场。
 ※有test mode的智能计算器多数情况下是允许被使用的，据观察，这边同学考试用的计算器都比Casio fx-991es plus 这个级别的要智能很多。
 **眼镜**：1-2副备用。在瑞士价格较贵。墨镜在日常阳光下可满足护眼需求，上雪山时则为生存必须。爱运动的同学也推荐从国内购买泳镜。尤其是近视泳镜，苏黎世及周边边境城市都没有卖。
-**日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。注意日韩风格的服装在当地很难买到，且价格昂贵。另外尺码较小的衣服本地也不大好买。
+**日常衣物**：春秋装多带，瑞士春秋绵长气候宜人风景秀丽。冬季气温和长三角比较像，外加到处都有暖气，不用太厚的毛衣。注意日韩风格的服装在当地很难买到，且价格昂贵。另外尺码较小的衣服本地也不大好买，有需要可以稍微多备一些。
 厚外套可以带但最多带一件即可，一方面带多了行李不好收拾，另一方面在瑞士打折季和outlets的衣服也很划算，有需要可以直接在瑞士购买。至于夏天的气温比较不稳定：14年夏天最高温度一度15度，晚上甚至要穿毛衣；22年夏天最高温度动辄30以上。所以夏装携带请自行斟酌。另外特别提醒一下，瑞士大部分建筑是没有空调的。
 **常用药物**：根据自己的情况携带对应药物，另外建议携带常用药物如云南白药、腹可安、喇叭正露丸等以备不时之需。
 抗生素也建议携带一些以备不时之需，因为这边的药店没有医生处方是不会售卖抗生素的，而医生非必要一般也不会开抗生素
