Update 10申请签证.md, 11国内手机号.md, 11行李准备.md

--- a/11国内手机号.md
+++ b/11国内手机号.md
@@ -12,6 +12,8 @@
 
 想改保号套餐的可直接关注移动/电信/联通官方公众号，找到人工客服（也可公众号直接打字人工客服发送）要求更改对应套餐。
 
+其他如果手机套餐绑定了宽带，需要带上身份证（和供应商提供的路由器）去营业厅先办理解绑，再办理最低保号套餐。具体可人工咨询或咨询当地营业厅。
+
 最好预充足够费用（按年计，出国多少年就充多少钱），以便运营商每月能顺利扣费，避免由于遗忘等原因导致手机号长期欠费被销号。当然，支付宝，微信随用随充也不是不可以。
 
 ^
@@ -40,4 +42,10 @@
 
 ^
 
-其他如果手机套餐绑定了宽带，需要带上身份证（和供应商提供的路由器）去营业厅先办理解绑，再办理最低保号套餐。具体可人工咨询或咨询当地营业厅。
+#### **3. 其它全球上网服务（小米等**）
+
+^
+
+#### **4. 瑞士临时旅游流量卡（淘宝等**）
+
+^
