--- a/10申请签证.md
+++ b/10申请签证.md
@@ -9,13 +9,14 @@
 大体来说（*不够精确的表达，应该明确是哪里要求的，标出来源*）申请材料有以下几项，**但请详细阅读学校给出的清单** ，清单表可在链接里查看
 
 * 申请表（national type D visa，链接中有下载表）
-* 护照（注意护照有效期）
-* 护照照片
-* 学校确认信
+* 护照（注意护照有效期，如有效期一年内，则建议换护照）
+* 护照照片（背景+尺寸按使领馆要求）
+* 学校注册确认信
 * 简历（需注明语言水平）
 * 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请合理安排时间）
-* 动机信和毕业计划
-* 银行存款（必须是在瑞士有支行的银行）
+* 动机信（避免明显的留瑞意向）
+* 毕业计划
+* 银行存款（建行 / 工行）
 
 **请详细阅读学校给出的清单**：
 
@@ -47,7 +48,7 @@
 
 #### **4. 如有问题**？
 
-给学校的international student office发邮件
+给学校的international student office发邮件（回复很快）
 
 ^
 
@@ -55,7 +56,7 @@
 
 <https://www.eda.admin.ch/countries/china/en/home/representations/embassy-in-beijing.html>
 
-瑞士在中国一共有四个领事馆，分别为：广州、香港、上海和成都，以上链接含有领馆管辖的城市、邮箱、电话和和签证相关问题的电话热线时间。
+瑞士在中国一共有一个大使馆和四个领事馆，分别在北京，广州、香港、上海和成都，以上链接含有使领馆管辖的城市、邮箱、电话和和签证相关问题的电话热线时间。
 
 ^
 
