--- a/13关于赴瑞行程.md
+++ b/13关于赴瑞行程.md
@@ -47,7 +47,7 @@
 
 #### **1.10 航班状态查询**
 
-对于此项我们一般推荐飞常准和Flightradar24，前者对“小白”较为友好，后者内容较为硬核、专业，大家可自行选择
+对于此项我们一般推荐飞常准和Flightradar24，前者对“小白”较为友好，后者内容较为硬核、专业，大家可自行选择。
 
 #### **1.11 选座tips（适用于搭乘经济舱的同学**）
 
@@ -195,8 +195,9 @@
   承运航司：阿提哈德航空EY
 * 北京大兴PKX/上海浦东PVG/广州白云CAN/杭州萧山HGH-多哈哈马德DOH-苏黎世ZRH
   承运航司：卡塔尔航空QR
+* 深圳 - 香港
 
-#### **2.5 其他路线**
+#### **2.5 其它路线**
 
 除以上路线外，还有少量其他路线可供选择，如：
 （仅考虑可以联程且行李可直挂的路线）
@@ -210,7 +211,7 @@
   \-- 免费行李额度较多（尤其是留学生票）
   缺点：
   \-- 总耗时稍长
-  \-- 中转国对中国内地护照不免签，也未开放过境签，航班不正常时有滞留风险
+  \-- 中转国对中国内地护照不免签，也未开放落地签，航班不正常时有滞留风险
 * 北京首都PEK-伦敦希思罗LHR-苏黎世ZRH
   参考：<https://piao.tips/d05985a3eb/>
   承运航司：英国航空BA、维珍航空VS、中国国际航空CA、中国南方航空CZ等
@@ -229,7 +230,7 @@
 当然，如果不想搭乘联程航班前往出境口岸所在城市，或者没有可选航班的，亦可选择自行通过公路、铁路、航空等前往出境口岸所在城市乘机，此处不表。
 此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考：<https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1>
 
-****
+***
 
 ### **3. 参考**
 
