--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -26,12 +26,13 @@
 
 ^
 
-**※交易提醒：* 经典骗钱套路是您还没来瑞士，之后如果您反悔不租的话他不划算，请您转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！
+\*※*交易提醒*： 经典骗钱套路是您还没来瑞士，之后如果您反悔不租的话他不划算，请您转定金过去让他看到谁是最真诚的租户。事实上瑞士的正规租房程序没有定金的说法，并不需要提前交定金，要求提前交钱的都不要信！类似这种可疑情况都不要转账！！
+
 * 瑞士正规租房流程是押金账户（会有一个专门开设在您名下的银行押金账户来存放您交的押金，而不是放在房东或房产公司的账户里）+租金对公转账（通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明。）
 * Debit卡可以正式汇款/转账（Zahlung），但Prepaid卡不行。请避免将大量金额一次性充入Prepaid卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易；
-* 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。\
+* 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。\\
 
 ^
 
-※找房小Tips：• 看到广告后给屋主发邮件的时候，切记在苏黎世这样的地方手里有房子的人每天收到的邮件雪花儿一样多。所以在邮件里表达意向介绍自己的时候生动一些，兴趣爱好什么的多写写，最好能够附上一张照片，增加阅读者的直观感受；比起发邮件，更有效的方式是打电话。不少房东查阅邮件的频率较低，通过电话可以及时获取房源信息，并约到较早的时间看房，这对于九月份刚过来并需要找房子的同学极为重要。还可以通过房东号码通过whatsapp联系房东。• 要为找房留足时间，最好提前3-4个月动手。尤其是住在WOKO的同学，半年或一年的合约到期时是找房高峰期，比如8月份合约到期，最好能3、4月份就开始找房；• 相对来说，几个没有固定收入的中国人想要一起租下一整套房子略微困难（也有用家长的工资单担保成功的。对于这种情况推荐了解一下Juwo，可能会有惊喜），建议单独找WG。\
-※学联合作租房公司（待确认学联是否还与intermezzo合作）：瑞士Intermezzo是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型创业公司，并有多名中国留学生在此实习。房型分布广泛，从2.5的studio到4.5的三人或四人合租flat及8人以上合租的独栋湖景别墅一应俱全。房源主要在苏黎世市区，靠近UZH,ETH,ZHAW等主校、Oerlikon、Irchel、ETH hongerberg附近。现已出租了约300间客房，其中中国留学生租客占比超60%，且这一比重持续增加。房间的价格区间为650-900瑞士法郎每月，押二付一，灵活终止合同，先住后付，不需提前支付任何费用。房费已包含所有水电网暖费用，并提供家具，可拎包入住。厨房设备齐全，洗碗机、烤箱、锅碗瓢盆入住时一应俱全，并拥有洗衣房。押金不会额外扣费，申请流程简单，提前一个月找房即可。**
+※找房小Tips：• 看到广告后给屋主发邮件的时候，切记在苏黎世这样的地方手里有房子的人每天收到的邮件雪花儿一样多。所以在邮件里表达意向介绍自己的时候生动一些，兴趣爱好什么的多写写，最好能够附上一张照片，增加阅读者的直观感受；比起发邮件，更有效的方式是打电话。不少房东查阅邮件的频率较低，通过电话可以及时获取房源信息，并约到较早的时间看房，这对于九月份刚过来并需要找房子的同学极为重要。还可以通过房东号码通过whatsapp联系房东。• 要为找房留足时间，最好提前3-4个月动手。尤其是住在WOKO的同学，半年或一年的合约到期时是找房高峰期，比如8月份合约到期，最好能3、4月份就开始找房；• 相对来说，几个没有固定收入的中国人想要一起租下一整套房子略微困难（也有用家长的工资单担保成功的。对于这种情况推荐了解一下Juwo，可能会有惊喜），建议单独找WG。
+※学联合作租房公司（待确认学联是否还与intermezzo合作）：瑞士Intermezzo是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型创业公司，并有多名中国留学生在此实习。房型分布广泛，从2.5的studio到4.5的三人或四人合租flat及8人以上合租的独栋湖景别墅一应俱全。房源主要在苏黎世市区，靠近UZH,ETH,ZHAW等主校、Oerlikon、Irchel、ETH hongerberg附近。现已出租了约300间客房，其中中国留学生租客占比超60%，且这一比重持续增加。房间的价格区间为650-900瑞士法郎每月，押二付一，灵活终止合同，先住后付，不需提前支付任何费用。房费已包含所有水电网暖费用，并提供家具，可拎包入住。厨房设备齐全，洗碗机、烤箱、锅碗瓢盆入住时一应俱全，并拥有洗衣房。押金不会额外扣费，申请流程简单，提前一个月找房即可。\*\*
