--- a/11行李准备.md
+++ b/11行李准备.md
@@ -35,7 +35,6 @@
 #### **3. 可以考虑携带**
 
 （不是日常生活必须，但偶尔能用上，瑞士有购买渠道）
-
 **旅行装洗漱用品**：到达瑞士的最初几天应急用。
 **小电饭煲**：没了它煮米饭得累死，不过电饭煲在各种亚超和二手群里面一般很容易找到，实在不行去本地的小米专卖店买一个也行（千万别买本地的牌子，其匮乏且不可靠的功能堪称智障）
 **床上用品**：IKEA价格相对合理，种类偏少，质量略粗糙。
@@ -70,3 +69,5 @@
 **肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
 **中草药**：同上，可能会被当成违禁品
 **瑞士军刀**：拜托搞搞清楚你来的是瑞士诶
+^
+**注：日常物品最好放在随身行李里，防止托运丢失的意外情况**
