Update .topwrite/assets/beh.pdf, 02落地事项.md, 10申请签证.md, 24找房租房.md, 25Kreisbüro报到.md, 26瑞士银行卡.md, 31苏黎世消费.md, ETH注册.md, UZH注册.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -16,7 +16,7 @@
 * 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请合理安排时间）
 * 动机信（避免明显的留瑞意向）
 * 毕业计划
-* 银行存款（建行 / 工行）
+* 银行存款（建行 / 工行）:attachment[beh.pdf]{src=".topwrite/assets/beh.pdf" size="292.63 kB"}
 
 **请详细阅读学校给出的清单**：
 
