--- a/24找房租房.md
+++ b/24找房租房.md
@@ -1,9 +1,9 @@
 #### **1. 临时过渡住所**
 
-* 酒店。酒店价格会比较高，适合极短期（一周内）。
-* 民宿。性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠。
-* 学长学姐/朋友家。
-* 群里的短租。自行甄别筛选。
+* 酒店：酒店价格会比较高，适合极短期（一周内）。
+* 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠。
+* 学长学姐/朋友家
+* 群里的短租：自行甄别筛选。
 
 ^
 
@@ -31,7 +31,7 @@
 | 学联合作伙伴&#xA;INTERMEZZO                   | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                         | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | Alex小哥，请用英语或德语沟通，vx号：Alex\_Intermezzo                                                                 |
 | 群内转租                                    |                                                                | 1. 中国人之间转租，沟通方便                                                        | 1. 价格区间波动范围大&#xA;2\. 需甄别真实性                          | &#xA;&#xA;                                                                                            |
 
-****
+***
 
 **学联合作伙伴——INTERMEZZO租房公司**
 
@@ -41,12 +41,12 @@
 **申请流程**：确定需求；填写申请表；签署合同；入住对接；押租金。
 Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房间的*申请表格链接*都在 **评论** 部分。如果没有看到申请表，那是因为该房间目前已被预订/租出。
 
-1. 如果你对其中的一个房间感兴趣，请在微信上添加Alex，并告知你的名字（拼音），然后把想租的房间的申请表发回。
-2. 请用德语或英语与Alex联系。
-3. 一般来说，如果Alex发布了一个房间，它立即可租。租房合同必须在提交申请后两周内开始执行。请不要要求从现在开始的两到三个月内的房间。他们不会提前那么久提供房间。
+1. 如果你对其中的一个房间感兴趣，请在微信上添加Alex，并告知你的名字（拼音），然后把想租的房间的申请表发回；
+2. 请用德语或英语与Alex联系；
+3. 一般来说，如果Alex发布了一个房间，它立即可租。租房合同必须在提交申请后两周内开始执行。请不要要求从现在开始的两到三个月内的房间。他们不会提前那么久提供房间；
 4. 只出租limited（有固定租期）的公寓。没有unlimited（无限可续）的公寓！
-5. 一般来说，公寓配有一张床、一张床垫、一把椅子、一张桌子、一盏台灯和一个壁橱，除非另有说明。
-6. 租金价格包括所有的水电费、Wifi和家具费用。
+5. 一般来说，公寓配有一张床、一张床垫、一把椅子、一张桌子、一盏台灯和一个壁橱，除非另有说明；
+6. 租金价格包括所有的水电费、Wifi和家具费用；
 7. 如果你提交了申请表，并且已经告诉你，Alex把申请表转给了他的同事来准备合同，那么这个申请就有约束力。如果你后来取消申请，我们将不接受你的进一步申请，或者向你收取50瑞士法郎的行政工作费用。
 
 :-: ![](.topwrite/assets/IMG_3979.JPG =304)
@@ -91,6 +91,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 10. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
 11. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
 12. 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的资金往来纠纷。
+13. Airbnb上有一些骗子，给假链接，要求提前转账，请多加留意
 
 ^
 
@@ -100,6 +101,4 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 2. 不能注册地址的租房，就是不给你合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上，按惯例是需要签订租房合同的，有合同就可以去Kreisbüro报到**
 3. 所谓收注册地址/出注册地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去报到。学联非常不推荐买卖注册地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和Kreisbüro的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
 
-^
-^
 ^
