--- a/26瑞士银行卡.md
+++ b/26瑞士银行卡.md
@@ -10,7 +10,8 @@
 | 优惠/优点    | 开户送价值50瑞法的**Key Club points** 可用于消费，开户可将别人列为推荐人（推荐人可享受额外优惠）                                                                                                                                    | 接受程度最广                                                                                                                                                                   | ATM特别多，且支持存硬币；夜班公交（周五周六0：30以后）免费（正常票价5瑞法，不能打折）；有很多其它折扣，比如麦当劳和星巴克可打85折                                                                          |
 | 移动支付     | UBS TWINT                                                                                                                                                                                      | TWINT                                                                                                                                                                    | ZKB TWINT（可能只有德语）                                                                                                                              |
 | 汇率       | Mastercard exchange rate + 0.5% 有评价是比较吃亏，但无processing fee                                                                                                                                      | PostFinance自己的汇率，有评价是比较实惠，且转账给欧元区免费                                                                                                                                      | ZKB自己的汇率，有评价是一般，但转账给欧元区免费                                                                                                                      |
-| 其它注意事项   | 如果能选debit card类型，尽量选Visa 或者 Mastercard Debit Cards，另外两种（V PAY 或者 Maestro Debit Cards）功能少一些                                                                                                     |                                                                                                                                                                          | 据说Prepaid卡接受程度较低                                                                                                                               |
+| 其它注意事项   | 如果能选debit card类型，尽量选Visa 或者 Mastercard Debit Cards，另外两种（V PAY 或者 Maestro Debit Cards）功能少一些
+因为美国和瑞士之间的协议，如果有美国经历(比如美国本科或者美国工作/实习过，即护照上有签证)的同学，在开户时会被额外审核，推荐去总行开户。                                                                                                     |                                                                                                                                                                          | 据说Prepaid卡接受程度较低                                                                                                                               |
 
 ^
 
