--- a/14“云”找房.md
+++ b/14“云”找房.md
@@ -1,6 +1,6 @@
 *如何远程找房？哪些可以云找房？明确强调出来哪些可以云找房*？
 
-* **Student Village**: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）
+* **Student Village**: <http://studentvillage.ch/> 有基本家具，拎包入住（仅限ETH学生）*一般不太可能通过官网找到房，而是通过facebook群和微信群组，具体请晨宇按我之前群里发的补充下*
 * **Living Sceinece**: <https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0> 有基本家具，拎包入住（仅限ETH学生）
 * **学生WOKO**：<http://www.woko.ch/> 有基本家具，拎包入住。年龄限制，28或以下。若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF
 * 学生JUWO: <http://www.juwo.ch/> 没有家具。年龄限制（16-28）；年收入不能超过30,000瑞郎
