--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,4 +1,4 @@
-**落地后，需要办理的各事项（按时间先后顺序**）：
+#### **落地后，需要办理的各事项（按时间先后顺序**）：
 
 | 事项                                   | 前提条件                                                                   | 事项内容                                                                                     | 推荐办理时间                                        |
 | ------------------------------------ | ---------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- | --------------------------------------------- |
@@ -14,48 +14,56 @@
 
 ^
 
+#### **具体行动路径**
+
 ::::tabs
 :::tab[入境前没有找到房（**没有租房合同**）]
 1\. 入境前先找好临时住处，酒店、Airbnb、借宿等等。尽量在一周以上（具体根据自身情况而定）;
 
-2\. 办理[Prepaid电话卡](https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li)（学联福利，提前一天提前预约，需要护照和任一学生身份证明材料）和swisspass交通卡（落地后机场或者各个火车站就可以办，需要护照）;
+2\. 办理Swisspass交通卡，拿到临时交通卡证明（落地后机场或各个火车站可以办）;
 
-Tips：若落地较晚，无法办理交通卡，可在机器上购买单程票回到住处。第二天到临近火车站办理一个月的Swisspass交通卡。等有稳定住处后，可到柜台把该交通卡换成年卡等，并可抵扣部分费用
+Tips：若落地较晚，无法办理交通卡，可在机器上购买单程票回到住处。第二天到临近火车站办理一个月的Swisspass交通卡。等有稳定住处后，可到柜台把该交通卡换成年卡等，并可抵扣部分费用。
 
-3\. 交学费，并在学校官网填写相应信息，让学校邮寄学生卡、注册信等材料（确保所填地址能收到信件，若更换住址，请及时在官网上更改）;
+3\. 办理[Prepaid电话卡](22prepaid电话卡.md)（学联福利，提前一天预约）；
 
-4\. **找房子**;
+4\. [学校报到](23学校注册.md)；
 
-5\. 若在14天内没有找到住处，**必须于入境起14天内前往临时住处所属的Kreisbüro，向工作人员说明自己的情况**，让工作人员进行登记，以免成为“黑户”；
+5\. [找房子](24找房租房.md);
 
-6\. 找到房子签署并拿到租房合同后，第一件是就是去住处所属的Kreisbüro注册，拿到报到证明（Anmeldebestätigung）
+6\. 若在14天内没有找到住处，**必须于入境起14天内前往临时住处所属的Kreisbüro，向工作人员说明自己的情况**，让工作人员进行登记，以免成为“黑户”；
 
-7\. 办理银行卡；
+7\. 找到房子签署并拿到租房合同；
 
-8\. 在入境3个月内购买保险（[Swisscare学联专属折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)），申请保险豁免；
+8\. 去住处所属的[Kreisbüro报到](25Kreisbüro报到.md)，拿到报到证明（Meldebestätigung），预约移民局录指纹日期；
 
-9\. 移民局录指纹，等待收到permit/Aufenthaltstitel居留卡；
+9\. 办理[银行卡](26瑞士银行卡.md)（需要护照、学校注册证明、Meldebestätigung、电话号和居住地址用于核实身份并邮寄材料）；
 
-10\. 办理[postpaid电话卡](https://forum.acssz.org/d/796-yi-wen-du-dong-rui-shi-dian-hua-qia-xue-lian-sunrise-yolfu-li)（学联福利）。
+10\. 在入境3个月内[购买保险并申请保险豁免](27保险及豁免.md)（[Swisscare学联专属折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)）；
+
+11\. [移民局录指纹](28移民局录指纹.md)，等待收到 Permit / Aufenthaltstitel 居留卡；
+
+12\. 收到居留卡后，办理[Postpaid电话卡](22prepaid电话卡.md)（学联福利）。
 :::
 
 :::tab[入境前已找到房/找好长租酒店（**有租房合同**）]
-1\. 办理swisspass交通卡（落地后机场或者各个火车站就可以办，需要护照和居住地址或c/o地址，用于邮寄交通卡）；
-2\. 办理prepaid电话卡（学联福利，提前一天提前预约，需要护照和任一学生身份证明材料）
+1\. 办理[Swisspass交通卡](21交通票.md)，拿到临时交通卡证明（落地后机场或各个火车站可以办）；
+
+Tips：若落地较晚，无法办理交通卡，可在机器上购买单程票回到住处。第二天到临近火车站办理一个月的Swisspass交通卡。等有稳定住处后，可到柜台把该交通卡换成年卡等，并可抵扣部分费用。
+2\. 办理[Prepaid电话卡](22prepaid电话卡.md)（学联福利，提前一天预约）；
 
 3\. 签署并拿到租房合同；
 
-4\. （如果没有提前邮寄保存）去学校拿新生材料（学生卡、Immatrikulationsbestätigung/Enrolment confirmation，注意学校窗口的开放时间很短）；
+4\. [学校报到](23学校注册.md)；
 
-5\. Kreisbüro报到（如何确定属于哪一个Kreisbüro，需要租房合同、护照，Immatrikulationsbestätigung/Enrolment confirmation），拿到Meldebestätigung，预约移民局录指纹日期；
+5\. [Kreisbüro报到](25Kreisbüro报到.md)（需要租房合同、护照，Immatrikulationsbestätigung/Enrolment confirmation），拿到报到证明Meldebestätigung，预约移民局录指纹日期；
 
-6\. 办理银行卡（需要学期在读证明、Meldebestätigung、电话号和居住地址用于核实身份并邮寄材料，问题，可否用c/o地址？）；
+6\. 办理[银行卡](26瑞士银行卡.md)（需要护照、学校注册证明、Meldebestätigung、电话号和居住地址用于核实身份并邮寄材料）；
 
-7\. 买保险并申请豁免（学联福利，需要Immatrikulationsbestätigung，Meldebestätigung，电话号，居住地址，最好有这边银行卡用于缴费）；
+7\. 入境三3个月内买[保险并申请豁免](27保险及豁免.md)（[Swisscare学联专属折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)，需要Immatrikulationsbestätigung，Meldebestätigung，电话号，居住地址，最好有这边银行卡用于缴费）；
 
-8\. 移民局录指纹+收到permit/Aufenthaltstitel；
+8\. [移民局录指纹](28移民局录指纹.md)，等待收到permit / Aufenthaltstitel 居留卡；
 
-9\. 办理postpaid电话卡（学联福利）。
+9\. 收到居留卡后，办理[Postpaid电话卡](22prepaid电话卡.md)（学联福利）。
 :::
 ::::
 
