--- a/31苏黎世消费.md
+++ b/31苏黎世消费.md
@@ -1,6 +1,18 @@
 #### **1. 月生活费**
 
-一般在1200-1500瑞左右。固定开销有房租、保险、电话费、交通费等，如果住学生公寓，woko、juwo、wfss，一般房租在500-800之间，比较便宜，如果租在外面私人房东，价格会更贵一些，在600-1000之间。保险方面，可以选择[学联专属Swisscare折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)，最低58瑞/月起；如果初来乍到不放心自己的安全，希望0元起赔，则可以选择Academic Care的0元起赔套餐。电话费一般在20-35瑞之间，学联有[Sunrise LEBARA专属折扣渠道](22prepaid电话卡.md)，其费用比市场价更低。交通费一般会买110区年卡，25岁以下的同学一年570瑞。其余的开销就是平时买菜购物了，如果大多在家做饭，差不多一个月200瑞左右超市购物就够了，偶尔下次馆子，人均在30-50瑞左右。网购一些护肤品衣服之类的，消费50-200不等。
+一般在1200-1500瑞左右。
+
+固定开销有房租、保险、电话费、交通费等，如果住学生公寓，woko、juwo、wfss，一般房租在500-800之间，比较便宜，如果租在外面私人房东，价格会更贵一些，在600-1000之间。
+
+保险方面，可以选择[学联专属Swisscare折扣](https://forum.acssz.org/d/51-swisscarebao-xian-guideline-da-yi-he-xue-lian-zhe-kou)，最低58瑞/月起（32岁以下）；如果初来乍到不放心，想要0元起赔，则可以选择Academic Care的0元起赔套餐，但其费用相对偏高（25岁以下120瑞/月，25岁及以上210瑞/月）。
+
+电话费一般在20-35瑞之间，学联有[Sunrise LEBARA专属折扣渠道](22prepaid电话卡.md)，其费用比市场价更低。
+
+交通费一般会买110区年卡，25岁以下的同学一年570瑞。
+
+其余的开销就是平时买菜购物了，如果大多在家做饭，差不多一个月200瑞左右超市购物就够了，偶尔下次馆子，人均在30-50瑞左右。
+
+网购一些护肤品衣服之类的，消费50-200不等。
 
 ^
 
@@ -14,12 +26,22 @@
 
 总的来说，大部分商品可以直接使用谷歌购物搜索，货比三家。
 
-化妆品护肤品方面，推荐Douglas，货品全，节日会有折扣，大型连锁欧洲化妆品公司，质量有保障。衣服方面，可以去hm、zalando、shein或者相应牌子的网店购物，或去线下门店。日用品方面，Amazon德国网站还是很不错的选择，基本上可以买到想要的东西，少数情况会被税，但基本上不会出现这样的情况。如果要买只有国内才能买到的东西或者希望买一些便宜的东西且能接受较长的物流时间，可以去AliExpress上购买，类似于海外淘宝，一般两周内也会送到。
+化妆品护肤品方面，推荐Douglas，货品全，节日会有折扣，大型连锁欧洲化妆品公司，质量有保障。衣服方面，可以去hm、zalando、shein或者相应牌子的网店购物。
+
+日用品方面，Amazon德国网站还是很不错的选择，基本上可以买到想要的东西，少数情况会被税，但基本上不会出现这样的情况。
+
+如果要买只有国内才能买到的东西或者希望买一些便宜的东西且能接受较长的物流时间，可以去AliExpress上购买，类似于海外淘宝，一般两周内也会送到。
 
 ^
 
 #### **4. 超市购物**
 
-瑞士两大国民超市为Coop和Migros，但其价格也不算便宜。可以选择更加物美价廉的超市购买相同的商品，如土耳其超市maxim food，蔬菜水果齐全，价格便宜，调料如生抽、醋之类的都可以买到，是很不错的超市。还有专门买肉的Carmelo’s Fleishshop和Fleisch Discount，肉种类很多，猪蹄鸡脚排骨都可以买到，并且价格优惠。此外德超lidl、英超aldi也是不错的选择。瑞士当地打折超市Denner也会比Coop、Migros便宜一些，但蔬菜肉类种类相对少一些。
+瑞士两大国民超市为Coop和Migros，但其价格也不算便宜。
+
+可以选择更加物美价廉的超市购买相同的商品，如土耳其超市maxim food，蔬菜水果齐全，价格便宜，调料如生抽、醋之类的都可以买到，是很不错的超市。
+
+还有专门买肉的Carmelo’s Fleishshop和Fleisch Discount，肉种类很多，猪蹄鸡脚排骨都可以买到，并且价格优惠。
+
+瑞士当地打折超市Denner也会比Coop、Migros便宜一些，但蔬菜肉类种类相对少一些。此外德超lidl、英超aldi也是不错的选择。
 
 ^
