--- a/31苏黎世消费.md
+++ b/31苏黎世消费.md
@@ -24,9 +24,13 @@
 
 #### **3. 网购**
 
-总的来说，大部分商品可以直接使用谷歌购物搜索，货比三家。
+总的来说，大部分商品**第一步都是直接使用谷歌购物搜索**，货比三家。
 
-化妆品护肤品方面，推荐Douglas，货品全，节日会有折扣，大型连锁欧洲化妆品公司，质量有保障。衣服方面，可以去hm、zalando、shein或者相应牌子的网店购物。
+化妆品护肤品方面，推荐Douglas，货品全，节日会有折扣，大型连锁欧洲化妆品公司，质量有保障。
+
+衣服方面，可以去hm、zalando、shein或者相应牌子的网店购物。
+
+电子产品可以查看digitec，microspot，interdiscount等等。
 
 日用品方面，Amazon德国网站还是很不错的选择，基本上可以买到想要的东西，少数情况会被税，但基本上不会出现这样的情况。
 
@@ -36,12 +40,11 @@
 
 #### **4. 超市购物**
 
-瑞士两大国民超市为Coop和Migros，但其价格也不算便宜。
+瑞士两大国民超市为Coop和Migros，但其价格也不算便宜。瑞士当地打折超市Denner也会比Coop、Migros便宜一些，但蔬菜肉类种类相对少一些。此外德超lidl、英超aldi也是不错的选择。
 
-可以选择更加物美价廉的超市购买相同的商品，如土耳其超市maxim food，蔬菜水果齐全，价格便宜，调料如生抽、醋之类的都可以买到，是很不错的超市。
+此外，土耳其超市maxim food，蔬菜水果齐全价格便宜，牛羊肉也相对便宜，调料如生抽、醋之类的都可以买到，是很不错的特色超市。
 
 还有专门买肉的Carmelo’s Fleishshop和Fleisch Discount，肉种类很多，猪蹄鸡脚排骨都可以买到，并且价格优惠。
 
-瑞士当地打折超市Denner也会比Coop、Migros便宜一些，但蔬菜肉类种类相对少一些。此外德超lidl、英超aldi也是不错的选择。
-
+^
 ^
