--- a/13关于赴瑞行程.md
+++ b/13关于赴瑞行程.md
@@ -2,13 +2,16 @@
 
 #### **1.1 购买机票，需尽早、需果断**
 
-因8-10月份是出境旺季（大批留学生开学），且洲际航班尚未完全恢复，届时赴瑞机票会极为紧张，价格亦会上涨。因此我们建议在签证办理妥当后立即选购机票，最迟也不宜晚于行前一个月（即7月中下旬-8月初）。
-此外，购买机票需要果断。当看到时长、价格、落地时间都较为合适的行程时，不要犹豫，尽快决断。（无数前辈们都有过在各种机票和航司里面比来比去，挑三拣四，或者想着“再等等说不定就降价了”，结果得出结论的时候几个选择都已经售罄，最后不得不买了一张还不如之前那些选择的经历。）
+因8-10月份是出境旺季（大批留学生开学），且洲际航班尚未完全恢复，届时出境方向机票会极为紧张，价格亦会上涨。因此我们建议在签证办理妥当后立即选购机票，最迟也不宜晚于行前一个月（即7月中下旬-8月初）。
+此外，购买机票需要果断。当看到时长、价格、落地时间都较为合适的行程时，不要犹豫，尽快决断。这样你也许无法做到“抄底”，但一定不会成为“冤大头”。（无数前辈们都有过在各种机票和航司里面比来比去，挑三拣四，或者想着“再等等说不定就降价/有更多航线航班复航了”，结果得出结论的时候几个选择都已经售罄，最后不得不买了一张还不如之前那些选择的经历。）
 
 #### **1.2 机票日期/时间选择**：
 
-* 航班落地（入境）时间须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免入境时遇到麻烦
-* 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少导致难以到达市区{自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地\[可提前下载Google Map和SBB Mobile/ZVV应用（此软件（及许多在瑞生活需要的软件）运行需要谷歌框架，使用安卓手机的同学请特别注意）]，并由此查询路线&购票，详见“交通票”部分）；苏黎世的出租车价格高昂，非必要不建议乘坐}
+* 航班落地（入境）时间必须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免入境时遇到麻烦
+* 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少等原因导致难以到达市区
+
+自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
+可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意），并由此查询路线&购票（详见[“交通票”](<21交通票.md>)及[”落地事项“](<02落地事项.md>)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐
 
 #### **1.3 中转路线选择注意事项**
 
@@ -17,7 +20,7 @@
 
 #### **1.4 购票时利用好留学生身份优势（留学生票**）
 
-部分航司为留学生专门提供留学生票，	在价格上会更为优惠，同时能够享受更多的免费托运行李额。选购此类客票时，须向出票航司提供留学生资质证明（录取通知书、学生签证、注册确认书等）以证明留学生身份，并在值机时一同携带以备航司查验。具体政策各航司有所不同，请参考各航司官网，必要时可联系其客服。
+部分航司为留学生专门提供留学生票，在价格上会更为优惠，同时能够享受更多的免费托运行李额。选购此类客票时，须向出票航司提供留学生资质证明（录取通知书、学生签证、注册确认书等）以证明留学生身份，并在值机时一同携带以备航司查验。具体政策各航司有所不同，请参考各航司官网，必要时可联系其客服。
 
 #### **1.5 如可以确定回国日期，可选择购买往返票，价格一般会优惠很多**
 
@@ -26,17 +29,19 @@
 
 #### **1.6 注意机票类别（多票组合vs联程票**）
 
-为了给旅客提供更优惠的票价，不少OTA平台会提供多票组合选项，即将中转行程的前段和后段分别出票，这样开出的机票基本不能实行行李直挂，必须在中转地提取行李并重新办理值机手续，经非申根、非免签国家转机还需要额外办理过境签证，因此不推荐选择此类客票。
-此外，部分航司（如海南航空HU）出具的联程票也不能实现行李直挂，需要特别注意。
+为了给旅客提供更优惠的票价，不少OTA平台会提供多票组合选项，即将中转行程的前段和后段分别出票，这样开出的机票基本不能实行行李直挂，必须在中转地提取行李并重新办理值机手续（即使前段和后段航班属于一个航司，地勤也有权拒绝；即使地勤明确表示愿意帮助”捞行李“也有一定风险），经非申根、非免签国家转机还需要额外办理过境签证，因此不推荐选择此类客票，即，不建议选择非联程票赴瑞。
+此外，部分航司（如海南航空HU）开出的联程票也不能实现行李直挂，需要特别注意。
 
 #### **1.7 注意机票的行李额、退改签条款等信息**
 
-一般地，同等物理舱位下，机票价格越低，其行李额就越少（但多数航司在洲际航线上不提供不含任何免费行李额的“基础经济舱”客票，即无论价格，至少有1件免费行李额），退改签条款也更苛刻（退改签费用更高，甚至根本不允许任何退改签）。
+一般地，同等物理舱位下，机票价格越低，其行李额就越少（但多数航司在洲际航线上不提供不含任何免费行李额的“基础经济舱”客票，即无论价格，至少有1件免费行李额），退改签条款也更苛刻（退改签费用更高，甚至根本不允许任何退改签）。如果你可能有自愿退改签的需求，建议不要选择那些虽然优惠但退改签条款苛刻的子舱位（机票）。
+此外，以上仅针对自愿退改签。因航司原因造成的非自愿退改签不受此影响。
+此外，如落地后发现行李丢失，请参考[”行李丢失处理“](<10行李丢失处理.md>)部分。
 
 #### **1.8 注意出票航司、承运航司的区别**
 
-* 出票航司：你的客票上所列明的“出票人”，单张客票只能有一个出票航司
-* 承运航司：实际执行你所乘坐航班的航司，单张客票涉及多个航段的，可以有多个承运航司
+* 出票航司：你的客票上所列明的“出票航司”（Issuer/Issuing Airline），单张客票只能有一个出票航司
+* 承运航司（Operator/Operating Airline）：实际执行你所乘坐航班的航司，单张客票涉及多个航班的，每个航班的承运航司可以不同
 * 选座、特殊餐食预定（如有）等须在承运航司官网进行；值机须在承运航司柜台办理
 
 #### **1.9 机票查询**
@@ -75,6 +80,7 @@
 根据现有政策，出境人员仍需通过“海关旅客指尖服务”微信小程序进行出境健康申报，申报须在出境前24小时内进行。我们建议大家在出境航班座位号确定后即进行申报，以节约在机场的时间；座位号因故无法确定的，亦可在机场现场申报。申报后会获得二维码，此码在海关处必须出示以备查验。
 
 ^
+***
 
 ### **2. 赴瑞可能路线及其特点**
 
@@ -96,8 +102,8 @@
 
 目前，中国内地→瑞士直航航班包含：
 
-* LX189航班，每周三、五、日执行，起降时刻11:20-18:50，实际飞行时长约13小时，执飞机型为B77W/A343
-* CA861航班，每周一、四、六执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
+* LX189航班（上海浦东PVG-苏黎世ZRH），[瑞士国际航空](<https://www.swiss.com/cn/zh/homepage>)承运，每周三、五、日执行，起降时刻11:20-18:50，实际飞行时长约13小时，执飞机型为B77W/A343
+* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](<https://www.airchina.com.cn/>)承运，每周一、四、六执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
 
 目前，中国内地→瑞士的航线航班没有增加的计划。如有增班的信息，我们会第一时间通告。
 
@@ -107,7 +113,7 @@
 
 * 出境口岸选择多
 * 航班数量相对多
-* 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证（<https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html>）
+* 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证，具体请参考[特区政府有关规定](<https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html>)。
 
 缺点：
 
@@ -117,10 +123,10 @@
 
 目前，中国香港→瑞士直航航班包含：
 
-* CX383航班，7月1日起调整为每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
-* LX139航班，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
+* CX383航班，[国泰航空](<https://www.cathaypacific.com/cx/sc_CN.html>)承运，7月1日起调整为每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
+* LX139航班，[瑞士国际航空](<https://www.swiss.com/cn/zh/homepage>)承运，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
 
-亦可以选择经香港前往申根区其他城市，再转机赴瑞。
+亦可以将本项与下面的3项结合起来安排路线，选择经香港前往申根区其他城市，再转机赴瑞，如”西安-香港-法兰克福-苏黎世“。
 
 #### **2.3 经申根区内其他城市转机赴瑞**
 
@@ -140,30 +146,31 @@
 * 价格较为参差，与日期、承运航司、航线等关系很大（见下文“常见路线”）
 * 在中转地需要过关，可能需要二次安检；抵达瑞士后不再需要过关
 * 客舱硬件，服务质量较为参差，与承运航司关系很大
-* 受俄乌局势影响，对于同一航线上的中→欧航班，外航航班比国内航司时间长
+* 受俄乌局势影响，对于同一航线上的中→欧航班，外航航班比国内航司航班时间长
 
 常见路线：
 （仅考虑可以联程且行李可直挂的路线）
 
 * 北京首都PEK/上海浦东PVG/成都天府TFU-法兰克福FRA-苏黎世ZRH
-  承运航司：中国国际航空CA、汉莎航空LH、瑞士国际航空LX等
+  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[汉莎航空LH](<https://www.lufthansa.com/cn/zh/homepage>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
   单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG-慕尼黑MUC-苏黎世ZRH
-  承运航司：中国国际航空CA、汉莎航空LH、瑞士国际航空LX等
+  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[汉莎航空LH](<https://www.lufthansa.com/cn/zh/homepage>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
   单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG-维也纳VIE-苏黎世ZRH
-  承运航司：中国国际航空CA、奥地利航空OS、瑞士国际航空LX等
+  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[奥地利航空OS](<https://www.austrian.com/lhg/cn/zh>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
   单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG/广州白云CAN-巴黎戴高乐CDG-苏黎世ZRH
-  承运航司：中国南方航空CZ、法国航空AF
+  承运航司：[中国南方航空CZ](<https://www.csair.com/cn/>)、[法国航空AF](<https://wwws.airfrance.com.cn/>)等
   单程价格：约8-12k
 * 北京首都PEK/北京大兴PKX/上海浦东PVG/广州白云CAN/厦门高崎XMN-阿姆斯特丹史基浦AMS-苏黎世ZRH
+  承运航司：[中国南方航空CZ](<https://www.csair.com/cn/>)、[中国东方航空MU](<https://www.ceair.com/>)、[厦门航空MF](<https://www.xiamenair.com/zh-cn/>)、[荷兰皇家航空KL](<https://www.klm.com.cn/>)等
   单程价格：约8-12k
 * 上海浦东PVG/郑州新郑CGO-赫尔辛基万塔HEL-苏黎世ZRH
-  承运航司：吉祥航空HO、芬兰航空AY等
+  承运航司：[吉祥航空HO](<http://www.juneyaoair.com/>)、[芬兰航空AY](<https://www.finnair.com/cn-zh>)等
   单程价格：约6-8k
 * 北京首都PEK/上海浦东PVG-哥本哈根CPH-苏黎世ZRH
-  承运航司：中国国际航空CA、北欧航空SK、瑞士国际航空LX等
+  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[北欧航空SK](<https://www.flysas.com/cn-zh/>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
   单程价格：中国国际航空：约8-9k；北欧航空：约4-6k
 
 此外，还有经华沙肖邦WAW转机的选择，但鉴于波兰航空LO疫情期间的种种“操作”，及其看起来十分不靠谱的航班计划，我们不建议选择该路线赴瑞。
@@ -174,13 +181,12 @@
 
 * 价格相对优惠（价格约4-7k）
 * 免费行李额度较多（尤其是留学生票）
-* 客舱硬件，服务质量均较好
 * 中转地对中国内地护照免签，即使遇到诸如航班取消一类的问题也不至于滞留在中转区进出不得
 
 缺点：
 
 * 因地理原因，总耗时较长（普遍在17.5h以上）
-* 里程累积较为不灵活\[阿联酋航空EK和阿提哈德航空EY均不属于任何航空联盟，在此累积的里程只能在本航司（及其合作伙伴处）消费；卡塔尔航空QR属于寰宇一家联盟，但该联盟在中国内地和申根区的实力都偏弱]
+* 里程累积相对不灵活\[阿联酋航空EK和阿提哈德航空EY均不属于任何航空联盟，在此累积的里程只能在本航司（及其合作伙伴处）消费；卡塔尔航空QR属于寰宇一家联盟，但该联盟在中国内地和申根区的实力都偏弱]
 
 其他特点：
 
@@ -190,12 +196,11 @@
 （仅考虑可以联程且行李可直挂的路线）
 
 * 北京首都PEK/上海浦东PVG/广州白云CAN-迪拜DXB-苏黎世ZRH
-  承运航司：阿联酋航空EK
+  承运航司：[阿联酋航空EK](<https://www.emirates.com/cn/chinese/>)
 * 北京大兴PKX/上海浦东PVG/广州白云CAN-阿布扎比AUH-苏黎世ZRH
-  承运航司：阿提哈德航空EY
+  承运航司：[阿提哈德航空EY](<https://www.etihad.com/zh/>)
 * 北京大兴PKX/上海浦东PVG/广州白云CAN/杭州萧山HGH-多哈哈马德DOH-苏黎世ZRH
-  承运航司：卡塔尔航空QR
-* 深圳 - 香港
+  承运航司：[卡塔尔航空QR](<https://www.qatarairways.com/zh-cn/homepage.html>)
 
 #### **2.5 其它路线**
 
@@ -213,31 +218,36 @@
   \-- 总耗时稍长
   \-- 中转国对中国内地护照不免签，也未开放落地签，航班不正常时有滞留风险
 * 北京首都PEK-伦敦希思罗LHR-苏黎世ZRH
-  参考：<https://piao.tips/d05985a3eb/>
+  参考：[《赴华|赴北美：英国转机指南（我在英国转机要签证吗?)》](<https://piao.tips/d05985a3eb/>)
   承运航司：英国航空BA、维珍航空VS、中国国际航空CA、中国南方航空CZ等
   单程价格：7-12k
   优点：
   \-- 持有申根D类签证的，或是持有申根居留卡的，原则上不需要申请过境签证
   \-- 出境城市选择较多
   缺点：
-  \-- 政策执行较为“灵活”，各地勤遇到各个情况时的处理方式均不同，因此有滞留风险
+  \-- 政策执行较为“灵活”，各地勤遇到各个情况时的处理方式均不同，很多航司也拒绝承认英国的免签入境规定，因此有滞留风险
   \-- 价格稍高
+
+此外，亦有经新加坡、曼谷等东南亚城市转机的选择。因其耗时普遍较长（长于上述所有方案），在此不列入。
 
 #### **2.6 前往出境口岸所在地**
 
 鉴于许多同学的常驻城市和出境口岸所在城市不同，需要额外考虑从常驻城市到出境口岸所在城市这段行程。
 一般情况下，假如你的常驻城市到出境口岸所在城市有直达航班，而该航班的承运航司或其合作伙伴又执飞上述洲际航线的，可在购票界面中直接讲始发城市填写为你的常驻城市，看看是否有常驻城市→出境口岸所在城市→中转城市（如有）→苏黎世的联程机票，如有的话，即使价格稍高我们也建议选择，因为这样行李能够从你的始发城市直接直挂到苏黎世，会大大简化你的行程。
 当然，如果不想搭乘联程航班前往出境口岸所在城市，或者没有可选航班的，亦可选择自行通过公路、铁路、航空等前往出境口岸所在城市乘机，此处不表。
-此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考：<https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1>
-
+此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考[香港赤鱲角机场发布的有关信息](<https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1>)。
+^
 ***
 
 ### **3. 参考**
 
-* 国际航线航班信息：知乎《国际航班汇总》专栏（<https://www.zhihu.com/column/c_1286552806351065088>）
-* 航班不正常保障及旅客权益：EC261
-  （<https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA>）
-* 内地往来香港航班信息：知乎《港澳台地区航班及相关信息》专栏
-  （<https://www.zhihu.com/column/c_1593393411708715010>）
+* 国际航线航班信息：[知乎《国际航班汇总》专栏](<https://www.zhihu.com/column/c_1286552806351065088>)（由本人，即[知乎@ZBAA-APP](<https://www.zhihu.com/people/zbaa-app/>)汇总整理，欢迎关注）
+* 航班不正常保障及旅客权益：[EC261](<https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA>)介绍
+* 内地往来香港航班信息：[知乎《港澳台地区航班及相关信息》专栏](<https://www.zhihu.com/column/c_1593393411708715010>)
 
+及文中其他外链。
+^
+***
+### **4. 声明**
+本文所有内容仅供参考，如按此购票遇到诸如航班延误/取消、行李延误等情况，我们恕不负有任何责任，敬请谅解。
 ^
