--- a/02落地事项.md
+++ b/02落地事项.md
@@ -20,7 +20,7 @@
 :::tab[入境前没有找到房（**没有租房合同**）]
 1\. 入境前先找好临时住处，酒店、Airbnb、借宿等等。尽量在一周以上（具体根据自身情况而定）;
 
-2\. 办理Swisspass交通卡，拿到临时交通卡证明（落地后机场或各个火车站可以办）;
+2\. 办理[Swisspass交通卡](21交通票.md)，拿到临时交通卡证明（落地后机场或各个火车站可以办）;
 
 Tips：若落地较晚，无法办理交通卡，可在机器上购买单程票回到住处。第二天到临近火车站办理一个月的Swisspass交通卡。等有稳定住处后，可到柜台把该交通卡换成年卡等，并可抵扣部分费用。
 
