--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,4 +1,4 @@
-#### **落地后，需要办理的各事项（按时间先后顺序**）：
+#### **落地后，需办理的所有事项（时间先后顺序**）：
 
 | 事项                                   | 前提条件                                                                   | 事项内容                                                                                     | 推荐办理时间                                        |
 | ------------------------------------ | ---------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- | --------------------------------------------- |
