--- a/13关于赴瑞行程.md
+++ b/13关于赴瑞行程.md
@@ -11,7 +11,7 @@
 * 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少等原因导致难以到达市区
 
 自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
-可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意），并由此查询路线&购票（详见[“交通票”](<21交通票.md>)及[”落地事项“](<02落地事项.md>)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐
+可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意），并由此查询路线&购票（详见[“交通票”](21交通票.md)及[”落地事项“](02落地事项.md)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐
 
 #### **1.3 中转路线选择注意事项**
 
@@ -36,7 +36,7 @@
 
 一般地，同等物理舱位下，机票价格越低，其行李额就越少（但多数航司在洲际航线上不提供不含任何免费行李额的“基础经济舱”客票，即无论价格，至少有1件免费行李额），退改签条款也更苛刻（退改签费用更高，甚至根本不允许任何退改签）。如果你可能有自愿退改签的需求，建议不要选择那些虽然优惠但退改签条款苛刻的子舱位（机票）。
 此外，以上仅针对自愿退改签。因航司原因造成的非自愿退改签不受此影响。
-此外，如落地后发现行李丢失，请参考[”行李丢失处理“](<10行李丢失处理.md>)部分。
+此外，如落地后发现行李丢失，请参考[”行李丢失处理“](10行李丢失处理.md)部分。
 
 #### **1.8 注意出票航司、承运航司的区别**
 
@@ -80,6 +80,7 @@
 根据现有政策，出境人员仍需通过“海关旅客指尖服务”微信小程序进行出境健康申报，申报须在出境前24小时内进行。我们建议大家在出境航班座位号确定后即进行申报，以节约在机场的时间；座位号因故无法确定的，亦可在机场现场申报。申报后会获得二维码，此码在海关处必须出示以备查验。
 
 ^
+
 ***
 
 ### **2. 赴瑞可能路线及其特点**
@@ -102,8 +103,8 @@
 
 目前，中国内地→瑞士直航航班包含：
 
-* LX189航班（上海浦东PVG-苏黎世ZRH），[瑞士国际航空](<https://www.swiss.com/cn/zh/homepage>)承运，每周三、五、日执行，起降时刻11:20-18:50，实际飞行时长约13小时，执飞机型为B77W/A343
-* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](<https://www.airchina.com.cn/>)承运，每周一、四、六执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
+* LX189航班（上海浦东PVG-苏黎世ZRH），[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周三、五、日执行，起降时刻11:20-18:50，实际飞行时长约13小时，执飞机型为B77W/A343
+* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、六执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
 
 目前，中国内地→瑞士的航线航班没有增加的计划。如有增班的信息，我们会第一时间通告。
 
@@ -113,7 +114,7 @@
 
 * 出境口岸选择多
 * 航班数量相对多
-* 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证，具体请参考[特区政府有关规定](<https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html>)。
+* 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证，具体请参考[特区政府有关规定](https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html)。
 
 缺点：
 
@@ -123,8 +124,8 @@
 
 目前，中国香港→瑞士直航航班包含：
 
-* CX383航班，[国泰航空](<https://www.cathaypacific.com/cx/sc_CN.html>)承运，7月1日起调整为每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
-* LX139航班，[瑞士国际航空](<https://www.swiss.com/cn/zh/homepage>)承运，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
+* CX383航班，[国泰航空](https://www.cathaypacific.com/cx/sc_CN.html)承运，7月1日起调整为每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
+* LX139航班，[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
 
 亦可以将本项与下面的3项结合起来安排路线，选择经香港前往申根区其他城市，再转机赴瑞，如”西安-香港-法兰克福-苏黎世“。
 
@@ -152,25 +153,25 @@
 （仅考虑可以联程且行李可直挂的路线）
 
 * 北京首都PEK/上海浦东PVG/成都天府TFU-法兰克福FRA-苏黎世ZRH
-  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[汉莎航空LH](<https://www.lufthansa.com/cn/zh/homepage>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
+  承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[汉莎航空LH](https://www.lufthansa.com/cn/zh/homepage)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
   单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG-慕尼黑MUC-苏黎世ZRH
-  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[汉莎航空LH](<https://www.lufthansa.com/cn/zh/homepage>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
+  承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[汉莎航空LH](https://www.lufthansa.com/cn/zh/homepage)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
   单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG-维也纳VIE-苏黎世ZRH
-  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[奥地利航空OS](<https://www.austrian.com/lhg/cn/zh>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
+  承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[奥地利航空OS](https://www.austrian.com/lhg/cn/zh)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
   单程价格：约8-9k
 * 北京首都PEK/上海浦东PVG/广州白云CAN-巴黎戴高乐CDG-苏黎世ZRH
-  承运航司：[中国南方航空CZ](<https://www.csair.com/cn/>)、[法国航空AF](<https://wwws.airfrance.com.cn/>)等
+  承运航司：[中国南方航空CZ](https://www.csair.com/cn/)、[法国航空AF](https://wwws.airfrance.com.cn/)等
   单程价格：约8-12k
 * 北京首都PEK/北京大兴PKX/上海浦东PVG/广州白云CAN/厦门高崎XMN-阿姆斯特丹史基浦AMS-苏黎世ZRH
-  承运航司：[中国南方航空CZ](<https://www.csair.com/cn/>)、[中国东方航空MU](<https://www.ceair.com/>)、[厦门航空MF](<https://www.xiamenair.com/zh-cn/>)、[荷兰皇家航空KL](<https://www.klm.com.cn/>)等
+  承运航司：[中国南方航空CZ](https://www.csair.com/cn/)、[中国东方航空MU](https://www.ceair.com/)、[厦门航空MF](https://www.xiamenair.com/zh-cn/)、[荷兰皇家航空KL](https://www.klm.com.cn/)等
   单程价格：约8-12k
 * 上海浦东PVG/郑州新郑CGO-赫尔辛基万塔HEL-苏黎世ZRH
-  承运航司：[吉祥航空HO](<http://www.juneyaoair.com/>)、[芬兰航空AY](<https://www.finnair.com/cn-zh>)等
+  承运航司：[吉祥航空HO](http://www.juneyaoair.com/)、[芬兰航空AY](https://www.finnair.com/cn-zh)等
   单程价格：约6-8k
 * 北京首都PEK/上海浦东PVG-哥本哈根CPH-苏黎世ZRH
-  承运航司：[中国国际航空CA](<https://www.airchina.com.cn/>)、[北欧航空SK](<https://www.flysas.com/cn-zh/>)、[瑞士国际航空LX](<https://www.swiss.com/cn/zh/homepage>)等
+  承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[北欧航空SK](https://www.flysas.com/cn-zh/)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
   单程价格：中国国际航空：约8-9k；北欧航空：约4-6k
 
 此外，还有经华沙肖邦WAW转机的选择，但鉴于波兰航空LO疫情期间的种种“操作”，及其看起来十分不靠谱的航班计划，我们不建议选择该路线赴瑞。
@@ -196,11 +197,11 @@
 （仅考虑可以联程且行李可直挂的路线）
 
 * 北京首都PEK/上海浦东PVG/广州白云CAN-迪拜DXB-苏黎世ZRH
-  承运航司：[阿联酋航空EK](<https://www.emirates.com/cn/chinese/>)
+  承运航司：[阿联酋航空EK](https://www.emirates.com/cn/chinese/)
 * 北京大兴PKX/上海浦东PVG/广州白云CAN-阿布扎比AUH-苏黎世ZRH
-  承运航司：[阿提哈德航空EY](<https://www.etihad.com/zh/>)
+  承运航司：[阿提哈德航空EY](https://www.etihad.com/zh/)
 * 北京大兴PKX/上海浦东PVG/广州白云CAN/杭州萧山HGH-多哈哈马德DOH-苏黎世ZRH
-  承运航司：[卡塔尔航空QR](<https://www.qatarairways.com/zh-cn/homepage.html>)
+  承运航司：[卡塔尔航空QR](https://www.qatarairways.com/zh-cn/homepage.html)
 
 #### **2.5 其它路线**
 
@@ -218,7 +219,7 @@
   \-- 总耗时稍长
   \-- 中转国对中国内地护照不免签，也未开放落地签，航班不正常时有滞留风险
 * 北京首都PEK-伦敦希思罗LHR-苏黎世ZRH
-  参考：[《赴华|赴北美：英国转机指南（我在英国转机要签证吗?)》](<https://piao.tips/d05985a3eb/>)
+  参考：[《赴华|赴北美：英国转机指南（我在英国转机要签证吗?)》](https://piao.tips/d05985a3eb/)
   承运航司：英国航空BA、维珍航空VS、中国国际航空CA、中国南方航空CZ等
   单程价格：7-12k
   优点：
@@ -235,19 +236,26 @@
 鉴于许多同学的常驻城市和出境口岸所在城市不同，需要额外考虑从常驻城市到出境口岸所在城市这段行程。
 一般情况下，假如你的常驻城市到出境口岸所在城市有直达航班，而该航班的承运航司或其合作伙伴又执飞上述洲际航线的，可在购票界面中直接讲始发城市填写为你的常驻城市，看看是否有常驻城市→出境口岸所在城市→中转城市（如有）→苏黎世的联程机票，如有的话，即使价格稍高我们也建议选择，因为这样行李能够从你的始发城市直接直挂到苏黎世，会大大简化你的行程。
 当然，如果不想搭乘联程航班前往出境口岸所在城市，或者没有可选航班的，亦可选择自行通过公路、铁路、航空等前往出境口岸所在城市乘机，此处不表。
-此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考[香港赤鱲角机场发布的有关信息](<https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1>)。
+此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考[香港赤鱲角机场发布的有关信息](https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1)。
+
 ^
+
 ***
 
 ### **3. 参考**
 
-* 国际航线航班信息：[知乎《国际航班汇总》专栏](<https://www.zhihu.com/column/c_1286552806351065088>)（由本人，即[知乎@ZBAA-APP](<https://www.zhihu.com/people/zbaa-app/>)汇总整理，欢迎关注）
-* 航班不正常保障及旅客权益：[EC261](<https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA>)介绍
-* 内地往来香港航班信息：[知乎《港澳台地区航班及相关信息》专栏](<https://www.zhihu.com/column/c_1593393411708715010>)
+* 国际航线航班信息：[知乎《国际航班汇总》专栏](https://www.zhihu.com/column/c_1286552806351065088)（由本人，即[知乎@ZBAA-APP](https://www.zhihu.com/people/zbaa-app/)汇总整理，欢迎关注）
+* 航班不正常保障及旅客权益：[EC261](https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA)介绍
+* 内地往来香港航班信息：[知乎《港澳台地区航班及相关信息》专栏](https://www.zhihu.com/column/c_1593393411708715010)
 
 及文中其他外链。
+
 ^
+
 ***
+
 ### **4. 声明**
+
 本文所有内容仅供参考，如按此购票遇到诸如航班延误/取消、行李延误等情况，我们恕不负有任何责任，敬请谅解。
+
 ^
