--- a/21交通票.md
+++ b/21交通票.md
@@ -41,15 +41,15 @@ ZVV使用分区计价的原则([分区地图](https://www.zvv.ch/zvv/en/travelca
 #### **4. 落地后**！
 
 在入境，取行李全都完成之后，最先要考虑的就是从机场到住的地方，对此，绝大多数人都会选择公共交通。
-因为SwissPass售票处大多开在机场和火车站，所以如果落地的时间刚好开门，那可以顺路去SwissPass办理区域年票，立时生效，之后便可以享受苏黎世的公共交通系统了。详见[办理SwissPass](#办理SwissPass)
+因为SwissPass售票处大多开在机场和火车站，所以如果落地的时间刚好开门，那可以顺路去SwissPass办理区域年票，立时生效，之后便可以享受苏黎世的公共交通系统了。详见“5.办理Swisspass”。
 
 ^
 
-如果第一时间无法办理SwissPass，那么可以先通过APP或者购票机器买票先去住所，详见[APP](#公交APP)。这些APP使用信用卡支付，可以不绑定SwissPass直接购票。
+如果第一时间无法办理SwissPass，那么可以先通过APP或者购票机器买票先去住所，详见“2.公交APP”。这些APP使用信用卡支付，可以不绑定SwissPass直接购票。
 
 ^
 
-#### **5. 办理SwissPass**
+#### **5. 办理Swisspass**
 
 SwissPass可以在网点线下办理，需要护照和一张护照照片，还需要提供一个地址用于邮寄交通卡。
 在办理的当天可以得到一个纸质的临时SwissPass，可以在查票时将其出示给查票员。
