--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -11,7 +11,7 @@
 |    王尊   |                      落地 - ETH注册                      |
 |    竹仝   |                   落地 - Kreisbüro报到                   |
 |    俞玥   |                      落地 - 瑞士银行卡                      |
-|    张堃   |                      落地 - 移民局录指纹                     |
+|         |                      落地 - 移民局录指纹                     |
 |    凌晞   |                      生活 - 苏黎世消费                      |
 
 ^
