--- a/13关于赴瑞行程.md
+++ b/13关于赴瑞行程.md
@@ -8,11 +8,11 @@
 #### **1.2 机票日期/时间选择**：
 
 * 航班落地（入境）时间必须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免入境时遇到麻烦。一般情况下，签证生效时间相比于开学都不会提前太多。
-* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[”云“找房](<14“云”找房.md>)和[”找房租房“](<24找房租房.md>)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免产生滞留问题。
+* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[”‘云’找房”](<14“云”找房.md>)和[“找房租房”](<24找房租房.md>)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免产生滞留问题。
 * 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少等原因导致难以到达市区
 
 自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
-可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意），并由此查询路线&购票（详见[“交通票”](21交通票.md)及[”落地事项“](02落地事项.md)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐。
+可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意），并由此查询路线&购票（详见[“交通票”](21交通票.md)及[“落地事项”](02落地事项.md)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐。
 
 #### **1.3 中转路线选择注意事项**
 
@@ -30,14 +30,14 @@
 
 #### **1.6 注意机票类别（多票组合vs联程票**）
 
-为了给旅客提供更优惠的票价，不少OTA平台会提供多票组合选项，即将中转行程的前段和后段分别出票，这样开出的机票基本不能实行行李直挂，必须在中转地提取行李并重新办理值机手续（即使前段和后段航班属于一个航司，地勤也有权拒绝；即使地勤明确表示愿意帮助”捞行李“也有一定风险），经非申根、非免签国家转机还需要额外办理过境签证，因此不推荐选择此类客票，即，不建议选择非联程票赴瑞。
+为了给旅客提供更优惠的票价，不少OTA平台会提供多票组合选项，即将中转行程的前段和后段分别出票，这样开出的机票基本不能实行行李直挂，必须在中转地提取行李并重新办理值机手续（即使前段和后段航班属于一个航司，地勤也有权拒绝；即使地勤明确表示愿意帮助“捞行李”也有一定风险），经非申根、非免签国家转机还需要额外办理过境签证，因此不推荐选择此类客票，即，不建议选择非联程票赴瑞。
 此外，部分航司（如海南航空HU）开出的联程票也不能实现行李直挂，需要特别注意。
 
 #### **1.7 注意机票的行李额、退改签条款等信息**
 
 一般地，同等物理舱位下，机票价格越低，其行李额就越少（但多数航司在洲际航线上不提供不含任何免费行李额的“基础经济舱”客票，即无论价格，至少有1件免费行李额），退改签条款也更苛刻（退改签费用更高，甚至根本不允许任何退改签）。如果你可能有自愿退改签的需求，建议不要选择那些虽然优惠但退改签条款苛刻的子舱位（机票）。
 此外，以上仅针对自愿退改签。因航司原因造成的非自愿退改签不受此影响。
-此外，如落地后发现行李丢失，请参考[”行李丢失处理“](10行李丢失处理.md)部分。
+此外，如落地后发现行李丢失，请参考[“行李丢失处理”](10行李丢失处理.md)部分。
 
 #### **1.8 注意出票航司、承运航司的区别**
 
@@ -47,7 +47,7 @@
 
 #### **1.9 机票查询**
 
-对于此项，除以携程为代表的国内常用OTA平台以外，我们还推荐：Skyscanner、Google Flight（后者需要“科学上网”）；
+对于此项，除以携程为代表的国内常用OTA平台以外，我们还推荐：Skyscanner、Google Flight（后者需要“翻墙”）；
 此外，在通过以上第三方平台选好路线以后，不妨通过对应的航司官网再看看这条路线的价格，可能会有惊喜（但OTA平台的行程组合能力一般强于航司官网）；
 一般情况下，不建议通过私人票代购票，非必要也不建议搭乘票代组织的包机（如有）赴瑞，除非能够百分百确定对方可靠。
 
@@ -128,7 +128,7 @@
 * CX383航班，[国泰航空](https://www.cathaypacific.com/cx/sc_CN.html)承运，7月1日起调整为每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
 * LX139航班，[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
 
-亦可以将本项与下面的3项结合起来安排路线，选择经香港前往申根区其他城市，再转机赴瑞，如”西安-香港-法兰克福-苏黎世“。
+亦可以将本项与下面的3项结合起来安排路线，选择经香港前往申根区其他城市，再转机赴瑞，如“西安-香港-法兰克福-苏黎世”。
 
 #### **2.3 经申根区内其他城市转机赴瑞**
 
