--- a/13关于赴瑞行程.md
+++ b/13关于赴瑞行程.md
@@ -8,7 +8,7 @@
 #### **1.2 机票日期/时间选择**：
 
 * 航班落地（入境）时间必须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免入境时遇到麻烦。一般情况下，签证生效时间相比于开学都不会提前太多。
-* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[”‘云’找房”](<14“云”找房.md>)和[“找房租房”](<24找房租房.md>)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免产生滞留问题。
+* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[“‘云’找房”](<14“云”找房.md>)和[“找房租房”](<24找房租房.md>)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免产生滞留问题。
 * 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少等原因导致难以到达市区
 
 自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
