--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -9,9 +9,8 @@
 |    思婕   |         落地 - 机场行李&#xA;落地 - 找房租房&#xA;生活 - 医疗相关        |
 |    晨宇   |                       落地 - 交通票                       |
 |    王尊   |                      落地 - ETH注册                      |
-|    竹仝   |                   落地 - Kreisbüro报到                   |
+|    竹仝   |           落地 - Kreisbüro报到&#xA;落地 - 移民局录指纹           |
 |    俞玥   |                      落地 - 瑞士银行卡                      |
-|         |                      落地 - 移民局录指纹                     |
 |    凌晞   |                      生活 - 苏黎世消费                      |
 
 ^
