--- a/10行李丢失处理.md
+++ b/10行李丢失处理.md
@@ -9,12 +9,12 @@
 * 登记完成后，工作人员会给你一张单子，上面有行李丢失编号，以及机场的行李丢失官网和联系方式。务必保存好这张单子
 * **建议不要等机场给你打电话**，在工作日时间可以给机场打电话询问行李情况，也可以在官网查看行李情况。如果打电话时行李已找到，建议最好不要让他们邮寄，时间允许的话立马去机场取行李（带上单子、机票、护照）。邮寄会比较慢，2-3天甚至更久才会收到
 * **一般行李会在7天左右找到**，如果在5天后仍没有找到，建议联系第一程/第二程航空公司询问行李是否已经转运到第二程/第三程飞机上，并与他们核对行李牌编号。如果出现行李箱上的行李牌编号和单子上行李牌编号不一致，请及时告知最后一程飞机的航空公司（有时候会出现转机飞机的工作人员输错行李编号的情况）
-* *丢失期间购置衣物等费用可以由航空公司负责承担*
-* *始发时检查行李牌是否包含所有中转和目的地位置*
-* *托运行李内不要放名贵物品，可能被内部盗窃*
-* *电脑手表等贵重物品一定要放在随身行李中*
-* *如果到机场后打开行李发现行李被翻了*，要在机场马上报告
-* *航空公司行李跟踪服务*
+* 丢失期间购置衣物等费用可以由航空公司负责承担
+* 始发时检查行李牌是否包含所有中转和目的地位置
+* 托运行李内不要放名贵物品，可能被内部盗窃。关于箱子是否需要上锁，各有利弊 。
+* 电脑手表等贵重物品一定要放在随身行李中。
+* 在机场后拿到行李后，立马检查行李是否被翻以及是否有东西丢失，如有相关情况，要在机场马上报告。
+* 航空公司行李跟踪服务。
 
 ^
 
