--- a/11行李准备.md
+++ b/11行李准备.md
@@ -3,8 +3,11 @@
 （不带这些你出来干啥\~瑞士没有获取渠道）
 
 **证件**：护照，身份证，驾照及公证件，带齐注册所需的所有文件。
+关于驾照：
 ※中国驾照在一年内配合有效认证/公证翻译文件，在瑞士是有效的。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租租车网站上有一个“国际驾照认证件”，据说被认可度很高。
 ※在苏黎世的第一年，建议在苏黎世交管局办理转驾照手续。如果没有在一年内办理转驾手续，转驾照需要通过一个特殊的路考(Kontrollfahrt)，重点不在汽车操控而在于对当地交规的理解。路考一旦挂科，国内驾照立即失效且不能补考，得从零开始学瑞士驾照。
+具体规则请参考以下网址：
+<https://www.eda.admin.ch/countries/china/en/home/services/driving-and-vehicles/driving-ch-foreign-licence.html>
 **证件照**：护照规格（35\*45）5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但8瑞郎4张，略贵，而且拍出来巨丑。
 **现金**：2000左右CHF基本够用。需要注意如果是UZH新生的话请至少额外准备1000CHF左右的现金用于缴纳第一笔学费，因为交学费的POST似乎没法刷信用卡和银联卡，而那会你也肯定没有办出本地的银行卡。
 **手机**：不用多说，没了它好多事干不了，国内手机在这边使用没问题。就算本地购买签约机也需要先办理居留证，建议国内带一个备用。注意国内与中国移动或联通或电信签约的手机，或充话费送手机的手机，来到欧洲这里也许不能用3G或4G网络，只能用2G。
