--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -1,18 +1,19 @@
 在Kreisbüro完成注册后，需要前往苏黎世移民局办理Residence Permit，才算正式完成整个注册流程。
 ^
-具体的时间你在Kreisbüro进行注册时工作人员会帮你预约，按照预约时间前往以下地址即可。
+具体的时间你在Kreisbüro进行注册时工作人员会帮你预约，按照预约时间前往以下地址：
 **移民局地址**：[Berninastrasse 45, 8090 Zürich](https://goo.gl/maps/CDzxUoomjsara83c7) 
 ^
 
 **需要携带的材料**：
+(具体请参考你在Kreisbüro获得的预约单，可能会有所不同）
 
-护照
-一张护照尺寸的照片
-学校开具的在读证明
-租房合同
-Kreisbüro注册证明以及预约单
-*21000瑞郎的存款证明
-（注意这个存款证明只在一年内有效，如果你申请的项目时间大于一年的话，你需要在首次注册12个月后再次提交一份新的存款证明，届时请注意提前筹措资金）
+※护照
+※一张护照尺寸的照片
+※学校开具的在读证明
+※租房合同
+※Kreisbüro注册证明以及预约单
+※21000瑞郎的存款证明*
+（注意这个存款证明只在一年内有效，如果你申请的项目耗时大于一年的话，你需要在首次注册12个月后再次提交一份新的存款证明，届时请注意提前筹措资金）
 
 
 ^
@@ -21,7 +22,7 @@ Kreisbüro注册证明以及预约单
 
 ^
 
-在办理完成一段时间后（视申请人数以及工作人员的工作效率，时间从几周到一两个月都有可能）你会以挂号信形式收到居留卡，需要确保邮箱上有本人姓名才能收到信件哦。
+在办理完成一段时间后（视申请人数以及移民局雇员的工作效率，时间从几周到一两个月都有可能）你会以挂号信形式收到居留卡，注意需要确保邮箱上有本人姓名才能收到信件。
 ^
 参考网址：
 <https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
