Update .topwrite/assets/MBDOP.pdf, .topwrite/assets/beh_1682637418454.pdf, .topwrite/assets/image_1682631028316.png, .topwrite/assets/image_1682631039883.png, .topwrite/assets/image_1682633334979.png, 12国内银行卡.md, 13赴瑞机票.md, 25居委会报到.md, 28移民局录指纹.md, SUMMARY.md Delete 13关于赴瑞行程.md, 25Kreisbüro报到.md

--- a/12国内银行卡.md
+++ b/12国内银行卡.md
@@ -10,7 +10,7 @@
 
 **优点**：
 
-* 取现便利：使用该卡在中国银行合作银行的ATM机上取现瑞士法郎，每月有一次机会免费取现。如UBS，Credit Swisse，PostFinance, Raiffeisen bank, ZKB, Luzerner Kantonalbank, Valiant Bank 等ATM机。
+* 取现便利：使用该卡在中国银行合作银行的ATM机上取现瑞士法郎，每月有一次机会免费取现。如UBS，Credit Suisse，PostFinance, Raiffeisen bank, ZKB, Luzerner Kantonalbank, Valiant Bank 等ATM机。
 * 免年费：不需要支付任何年费，降低了留学生的使用成本；
 * 外币兑换： 可在手机APP上面根据实时汇率进行结汇购汇。
 * 跨境转账方便：留学生可以通过该卡方便地进行跨境汇款和转账，方便快捷；
