--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -12,8 +12,10 @@
 ※学校开具的在读证明
 ※租房合同
 ※Kreisbüro注册证明以及预约单
+※100瑞郎左右的手续费
 ※21000瑞郎的存款证明*
 （注意这个存款证明只在一年内有效，如果你申请的项目耗时大于一年的话，你需要在首次注册12个月后再次提交一份新的存款证明，届时请注意提前筹措资金）
+
 
 
 ^
@@ -26,3 +28,4 @@
 ^
 参考网址：
 <https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
+<https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf>
