--- a/25居委会报到.md
+++ b/25居委会报到.md
@@ -32,5 +32,5 @@
 
 #### **4**. **临时居留证(Meldebestätigung)**
 
-在居委会报到后，工作人员会给你一张临时居留证（一张含有你个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}）。相比于正式的居留卡，这张证明使用频率相对较低。但也**请妥善保管**（含获得正式居留卡之后），因为这会你就可以用它办理瑞士本地的银行卡了，包括一张储蓄卡以及一张Prepaid（即额度为0的信用卡，需要提前充值才能使用）/Credit卡。
+在居委会报到后，工作人员会给你一张临时居留证（一张含有你个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}）。相比于正式的居留卡，这张证明使用频率相对较低。但也**请妥善保管**（就算获得正式居留卡之后也请妥善保管，偶尔会用得上），因为这会你就可以用它办理瑞士本地的银行卡了，包括一张储蓄卡以及一张Prepaid（即额度为0的信用卡，需要提前充值才能使用）/Credit卡。
 此外未来如果需要[搬家（办理地址变更）](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html>)，在向政府报备时也需要用到这张临时居留证（上的参考号）（具体根据所选的报备方式有所不同）。
