--- a/25居委会报到.md
+++ b/25居委会报到.md
@@ -1,5 +1,5 @@
 #### **1. 查询所属居委会**
-*本章节所称“居委会”，在苏黎世市区（下图中彩色部分）叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区（下图中白色部分）叫做“Einwohnerkontrolle”，为便于表述，在不区分二者的情况下，统称其为“居委会”。*
+*本章节所称“居委会”，在苏黎世市区（下图中彩色部分）叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区（下图中白色部分）叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会”。*
 ![](.topwrite/assets/image_1682633334979.png)
 ^
 **抵达苏黎世后14天内，必须向住址所在地的居委会报到**（如14天内未租到房的，也需要前往暂住地址的居委会说明情况请求延期，避免成为“黑户”，具体请参见[“落地事项”部分](<02落地事项.md>)）。含此在内的所有业务都必须到住址所在地的居委会办理（苏黎世不允许跨区办理业务），关于自己的住址具体对应哪一个居委会，可：
