--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -1,4 +1,4 @@
-*与[“居委会报到”部分](<25居委会报到.md>)相同，本章节所称“居委会”，在苏黎世市区叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区叫做“Einwohnerkontrolle”，为便于表述，在不区分二者的情况下，统称其为“居委会”。*
+*与[“居委会报到”部分](<25居委会报到.md>)相同，本章节所称“居委会”，在苏黎世市区叫做“Kreisbüro”（3、4、5、6、9、10、11、12区）或者“Personenmeldeamt”（1、2、7、8区），在苏黎世郊区叫做“Einwohnerkontrolle”，为便于表述，下文在不需要区分的情况下将“Kreisbüro”“Personenmeldeamt”统称为“Kreisbüro”，将“Kreisbüro”“Personenmeldeamt”“Einwohnerkontrolle”统称为“居委会”。*
 ^
 在居委会完成注册后，需要前往苏黎世移民局办理居留卡（DE: Aufenthaltsbewilligung; EN: Residence Permit），才算正式完成整个注册流程。
 
