--- a/28移民局录指纹.md
+++ b/28移民局录指纹.md
@@ -24,7 +24,7 @@
 ※一张护照尺寸的照片
 ※学校开具的在读证明（DE: Immatrikulationsbestätigung; EN: Enrolment Confirmation)
 ※租房合同
-※Kreisbüro注册证明（Meldebestätigung，见[“居委会报到”部分](<25居委会报到.md>)以及预约单
+※Kreisbüro注册证明（Meldebestätigung，见[“居委会报到”部分](<25居委会报到.md>)）以及预约单
 ※100瑞郎左右的手续费（刷卡现金均可）
 ※21000瑞郎的存款证明（与办理签证一样需要存入指定银行，见:attachment[beh.pdf]{src=".topwrite/assets/beh_1682637418454.pdf" size="281.56 kB"}）
 
@@ -44,5 +44,4 @@
 
 参考网址：
 <https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
-^
 <https://ethz.ch/content/dam/ethz/main/continuing-education/Merkblaetter/Factsheet_Visum_en.pdf>
